--- a/app/views/questions/edit.html.erb
+++ b/app/views/questions/edit.html.erb
@@ -1,6 +1,5 @@
 <h1>Editing question</h1>
 
-<%= render 'form' %>
-
-<%= link_to 'Show', @question %> |
+<%= if @question.user_id ==  current_user.id then render 'form'; else  'Permission denied'  end %>
+<%= link_to 'Show', @question %> |'
 <%= link_to 'Back', questions_path %>
