--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -4,6 +4,7 @@
           <ul class="nav navbar-nav navbar-right">
             <li><%= link_to "Home", root_path %></li>
             <li><%= link_to "Help", help_path %></li>
+            <li><%= link_to "Question", questions_path %></li>
             <li><% if user_signed_in? %>
   <p>Welcome <%= current_user.email %>
   <%= link_to 'Logged In [click to logout]', destroy_user_session_path, :method => :delete %>
