--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -1,3 +1,3 @@
 <% provide(:title, "Home") %>
 <h1>Home</h1>
-<p> This is home page </p>
+<strong>If you have a problem to translate a Japanese's clause, this website where everybody wil help you </strong>
