--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,8 +9,10 @@
   </head>
   <body>
     <%= render 'layouts/header' %>
-    <div class="container">
-      <%= yield %>
+    <div class="main">
+      <div class="container">
+        <%= yield %>
+      </div>
     </div>
     <%= render 'layouts/footer' %>
   </body>
