--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -7,8 +7,8 @@
             <li><%= link_to "Help", help_path %></li>
             <li><%= link_to "Question", questions_path %></li>
             <li><% if user_signed_in? %>
-              Welcome <%= current_user.email %></li>
-            <li><%= link_to 'Logged In [click to logout]', destroy_user_session_path, :method => :delete %></li>
+              <span id="not-login">Welcome <%= current_user.email %></span></li>
+            <li><%= link_to 'Logged In [Click to logout]', destroy_user_session_path, :method => :delete %></li>
       <% else %>
             <li><span id="not-login">You are not signed in!</span></li>
             <li><%= link_to 'Login', new_user_session_path %></li>
