--- a/app/views/questions/index.html.erb
+++ b/app/views/questions/index.html.erb
@@ -1,8 +1,8 @@
 <h1>Listing questions</h1>
 
-<table>
+<table class="table table-hover">
   <thead>
-    <tr>
+    <tr> 
       <th>Title</th>
       <th>Content</th>
       <th>Id</th>
