--- a/app/views/questions/show.html.erb
+++ b/app/views/questions/show.html.erb
@@ -1,7 +1,7 @@
 <p id="notice"><%= notice %></p>
 
 <strong>Question</strong>
-<table>
+<table class="table table-hover">
   <tbody>
     <tr>
       <th>ID</th>
